16-Feb-2012 Fixed ridiculously high CPU load from the C include dependency checking thread.

13-Feb-2012 Opus.Core.BaseOptionCollection now has a virtual FinalizeOptions method. This can be overridden in any of the option collection classes, and is executed after all option update delegates have been issued. This can be used to set output paths, for example.

12-Feb-2012 Adding CanUseOrigin (bool) and RPath (StringArray) to the Gcc linker options for the 'z origin' and 'rpath' features.

10-Feb-2012 Include dependency generation no longer writes duplicate file paths to .d files. Also, any 'nested' includes that do not contain any #includes will no longer terminate the search early.

08-Feb-2012 Schedulers now check for empty rank node collections in their constructors, rather than on every call to get the next Node to build. Opus.Core.BuildScheduler also now removes completed ranks from it's search for the next available Node to build.

07-Feb-2012 Opus.Core.DependencyNodeCollection now has a ManualResetEvent (an array of one to be precise) that is signalled when all of it's DependencyNodes have been built. The BuildManager, when an agent is available but there is no Node in a state to be built (waiting on dependencies), will now wait on running Node builds to finish before calling the scheduler again, rather than spinning.

05-Feb-2012 QtCommon.BinPath and LibPath and includePaths are now instance field/properties.

04-Feb-2012 Removed EnvironmentPaths function from Opus.Core.ITool, and added it to it's own interface, Opus.Core.IToolEnvironmentPaths, as the Paths function. Only tools that need to extend the PATH environment need to implement that interface now.

04-Feb-2012 Removed RequiredEnvironmentVariables property from Opus.Core.ITool, and added it to it's own interface, Opus.Core.IToolRequiredEnvironmentVariables, as the VariableNames property. Only tools that need environment variables need to implement that interface now.
