@@ -1,3 +1,5 @@
+16-Feb-2012 Added Opus.Core.State.BuildStartedEvent, which is issued by the BuildManager. This can be used by additional build threads to wait until the build has started.
+
 16-Feb-2012 Fixed ridiculously high CPU load from the C include dependency checking thread.
 
 13-Feb-2012 Opus.Core.BaseOptionCollection now has a virtual FinalizeOptions method. This can be overridden in any of the option collection classes, and is executed after all option update delegates have been issued. This can be used to set output paths, for example.
